# EWSEngine

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run.py
api/: __init__.py  server.py
backend/: __init__.py  interfaces.py  models.py  service.py
backend/physics/: __init__.py  geometry.py  optics.py  polarization.py  speed.py  tem.py  transmission.py  wave.py
core/: __init__.py  exceptions.py  physics.py  registry.py  types.py
frontend/: __init__.py  app_v2.py  client.py  launcher.py  plot_tools.py
frontend/scenes/: base.py  optics.py  polarization.py  speed.py  tem.py  transmission.py  wave.py
modules/: optics_scene.py  polar_scene.py
tests/: test_frontend_scenes.py  test_physics.py  test_service_api.py
ui/: base_scene.py
