[project]
name = "EWSEngine"
version = "0.2.2"
description = "Electromagnetic wave simulation engine with desktop UI and local API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9",
    "numpy>=2.1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11",
    "pytest>=8.3",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
